examples/test/testpolicy7277.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7277
  namespace: namespace330
spec:
  podSelector:
    matchLabels:
      key47: value47
      key37: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value48
      podSelector:
        matchLabels:
          key9: value34
          key11: value29
